# O1

./: .env.example  .gitignore  ORCHESTRATEUR-SPEC-V1.md  PONT-PROCESS-VERS-OUTIL.md  PROCESS-PRODUCTION-IA.md  pyproject.toml  run_pipe.py
.github/workflows/: ci.yml
orchestrateur/: graph.py  pipe.py  state.py
orchestrateur/nodes/: verif_ci.py
tests/: test_pipe_e2e.py  test_supervisor.py  test_verif_ci.py  test_verif_ci_integration.py
