[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrateur"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "langsmith>=0.1.100",
    "python-dotenv>=1.0.0",
    # Agent node (brique 2) : claude-agent-sdk — ajouter quand on implémente run_agent
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: appels réseau réels vers GitHub — nécessite GITHUB_TOKEN (job CI séparé)",
    "e2e: tuyau complet avec vrais LLM — nécessite ANTHROPIC_API_KEY + claude CLI (job CI séparé)",
]

[tool.hatch.build.targets.wheel]
packages = ["orchestrateur"]
